--- a/clog_test/clog_test.vcxproj
+++ b/clog_test/clog_test.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{31422AD6-5468-4B97-94B9-AA7F7B0B2A11}</ProjectGuid>
+    <ProjectGuid>{476771B7-0753-4F8D-935E-38DC257C2FB1}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>clogtest</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
@@ -72,7 +72,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(BOOST_HOME);$(SolutionDir)\clog;$(IncludePath)</IncludePath>
+    <IncludePath>$(BOOST_HOME);..\clog;$(IncludePath)</IncludePath>
     <LibraryPath>$(BOOST_HOME)\lib32-msvc-12.0;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
